--- a/index.html
+++ b/index.html
@@ -12,9 +12,17 @@
             left: 50%;
             transform: translate(-50%,-50%);
         }
+        
+        button {
+            width: 120px;
+            height: 40px;
+        }
     </style>
 </head>
 <body>
+
+<button id="cpuVer2">strong CPU</button><br><br>
+<button id="cpuVer1">weak CPU</button>
 
 <canvas id="chessBoard"></canvas>
 
